src/test/test-models/bad/declare-define-var-double-4.stan
data {
  real a1[2];
}
parameters {
  real y;
  real a2 = 1.0; // cannot assign in parameters block
}
model {
  y ~ normal(0,1);
}

